<resources>
    <string name="app_name">Medicalia</string>

    <!-- Login-->
    <string name="welcome">Bienvenido</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="title_activity_subject">SubjectActivity</string>
    <string name="registrate">Registrate</string>
    <string name="already_member">¿Ya eres miembro? Inicia sesión</string>
    <string name="create_account">Crear cuenta</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="no_account">¿Aún no tiene cuenta? Cree una</string>
    <string name="creating_account">Creando cuenta</string>
    <string name="login_failed">Fallo el inicio de sesión</string>
    <string name="at_leats_3_characters">Requiere al menos 3 caracteres</string>
    <string name="valid_email">Ingresa una dirección de correo válida</string>
    <string name="between_8_characters">Debe ser de un mínimo de 8 caracteres</string>
    <string name="password_not_match">Las contraseñas no coinciden</string>
    <string name="authenticating">Autenticando...</string>
    <string name="register_failed">Falló el registro</string>
    <string name="complete_register">Completa tus datos</string>
    <string name="blood_type">Tipo de sangre</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="allergies">Alergias</string>
    <string name="save">Guardar</string>
    <string name="at_leats_5_characters">Requiere al menos 5 caracteres</string>
    <string name="invalid_value">Valor inválido</string>
    <string name="gender">Género</string>
    <string name="saving_profile">Guardando perfil</string>
    <string name="genderInvalid">Género invalido (M/H)</string>
    <string name="title_activity_drawer">Inicio</string>
    <string name="phone">Número de teléfono</string>

    <string name="token">"Token token="</string>

    <!-- Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="loading">Cargando...</string>
    <string name="action_settings">Settings</string>

    <string name="logout">Cerrar Sesión</string>
    <string name="find_doctors">Buscar Doctores</string>
    <string name="find_by_name">Mi doctor</string>
    <string name="find_by_hospital">Hospital</string>
    <string name="find_by_specialty">Especialidad</string>
    <string name="profile">Perfil</string>
    <string name="calendar">Calendario</string>
    <string name="diagnostics">Diagnósticos</string>

    <!-- Constantes-->
    <string name="name_shared_preferences">Medicalia</string>
    <string name="is_logued_key">isLogued</string>
    <string name="message_key">message</string>
    <string name="current_user_key">currentUser</string>
    <string name="user_key">user</string>
    <string name="find_by_key">findBy</string>
    <string name="by_name">Mi Doctor</string>
    <string name="by_specialty">Especialidad</string>
    <string name="by_hospital">Hospital</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
