<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>

    <item android:title="@string/find_doctors">
        <menu>
            <item
                android:id="@+id/find_by_name"
                android:icon="@drawable/md"
                android:title="@string/find_doctors" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/find_by_hospital" />
            <item
                android:id="@+id/find_by_category"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/find_by_specialty" />
        </menu>
    </item>
</menu>
